force-app/main/default/objects/Inventory_Lot__c/Inventory_Lot__c.object-meta.xml
<CustomObject>
    <label>Inventory Lot</label>
    <nameField>
        <label>Inventory Lot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Lot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>