force-app/main/default/objects/Inventory_Lot__c/fields/Maximum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Quantity__c</fullName>
    <label>Maximum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>