force-app/main/default/objects/Inventory_Lot__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Inventory Lot</relationshipLabel>
    <relationshipName>Inventory_Lot</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>