force-app/main/default/objects/Inventory_Lot__c/validationRules/Min_should_be_Lesser_than_Max_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_should_be_Lesser_than_Max_quantity</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Minimum_Quantity__c &lt;  Maximum_Quantity__c)</errorConditionFormula>
    <errorDisplayField>Maximum_Quantity__c</errorDisplayField>
    <errorMessage>Maximum quantity should be greater than Minimum quantity</errorMessage>
</ValidationRule>