force-app/main/default/objects/Inventory_Lot__c/validationRules/Product_should_be_Vehicle.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_should_be_Vehicle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Type__c, &quot;Accessories&quot;),
ISPICKVAL(Type__c, &quot;parts&quot;)


),
ISPICKVAL(Product__r.Type__c , &quot;Vehicle&quot;)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Product Type should be Vehicle</errorMessage>
</ValidationRule>