force-app/main/default/objects/Inventory_Lot__c/validationRules/product_type_should_be_match_accessories.validationRule-meta.xml
<ValidationRule>
    <fullName>product_type_should_be_match_accessories</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Type__c, &quot;Parts&quot;),
ISPICKVAL(Type__c, &quot;Vehicle&quot;)


	

),
ISPICKVAL(Product__r.Type__c , &quot;Accessories&quot;)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Product Type should be accessories</errorMessage>
</ValidationRule>