force-app/main/default/objects/Inventory_Lot__c/validationRules/product_type_should_be_part.validationRule-meta.xml
<ValidationRule>
    <fullName>product_type_should_be_part</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Type__c, &quot;Accessories&quot;),
ISPICKVAL(Type__c, &quot;Vehicle&quot;)



),
ISPICKVAL(Product__r.Type__c , &quot;parts&quot;)
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Product Type should be parts</errorMessage>
</ValidationRule>