force-app/main/default/objects/Inventory_Lot__c/validationRules/Restrict_records_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_records_creation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISNEW(),
    ISPICKVAL( Type__c , &apos;Spare Vehicle&apos;)
)</errorConditionFormula>
    <errorMessage>A new record with the type &quot;Spare Vehicle&quot; cannot be created. Because this record is limited to the creation of records.</errorMessage>
</ValidationRule>